@@ -7,5 +7,7 @@ filename = lib/Math/Libgsl/Polynomial.rakumod
 [PruneFiles]
 ; match = ^ 'xt/'
 
+[UploadToZef]
+
 [Badges]
 provider = github-actions/test
